# gl-instancing

./: CMakeLists.txt  README.md
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  texture.cpp  texture.hpp  window.cpp
src/shaders/: cube.frag  cube.vert
